Updated index file to fix email not showing up in text box and sign up button is in the middle

--- a/css/screen.css
+++ b/css/screen.css
@@ -86,8 +86,14 @@ select {
   cursor: pointer;
 }
 
+#input-submit {
+  display: flex;         
+  justify-content: center;  /* allows submit button to be aligned to the middle */
+}
+
 /* submit button styling */
 input[type="submit"] {
   color: #000000;
-  font-family: 'Quantico', sans-serif;
+  font-family: 'Quantico', sans-serif; 
+  margin-top: 2rem;
 }
